--- a/views/view/information.ejs
+++ b/views/view/information.ejs
@@ -23,6 +23,11 @@
           font-weight: 600;
         }
 
+        span,
+        li {
+          line-height: 2.5;
+        }
+
         div {
           /* border: 1px dashed; */
         }
@@ -33,7 +38,7 @@
   <div id="root">
     <%- include('../partials/view_header') %>
       <!-- Main Body  -->
-      <div class="w-75 container content-block d-flex align-items-center">
+      <div class="w-75 container content-block d-flex align-items-center mb-5">
         <div class="d-flex flex-column">
           <div id="terms">
             <div class="item-title">Terms and Conditions</div>
@@ -81,11 +86,10 @@
                   jurisdiction of the courts of Taiwan. </li>
                 <li><b>Changes to Terms and Conditions:</b> We reserve the right to modify, update or change these terms
                   and conditions at any time, without prior notice to users. Your continued use of our service after
-                  such
-                  modifications will constitute your acceptance of the revised terms and conditions. </li>
+                  such modifications will constitute your acceptance of the revised terms and conditions. </li>
                 <li><b>Entire Agreement:</b> These terms and conditions constitute the entire agreement between you and
-                  us
-                  regarding the use of our service and supersede any prior agreements, whether written or oral, relating
+                  us regarding the use of our service and supersede any prior agreements, whether written or oral,
+                  relating
                   to the same subject matter. </li>
               </ol>
             </div>
@@ -132,6 +136,13 @@
                   date at the top of this policy.
                 </li>
               </ol>
+              <span>Last updated: 2023-04-23</span>
+            </div>
+          </div>
+          <div id="contact">
+            <div class="item-title">Contact</div>
+            <div class="px-2">
+              <span></span>
             </div>
           </div>
         </div>
