[chore] UI adjustment

--- a/views/partials/main_footer.ejs
+++ b/views/partials/main_footer.ejs
@@ -30,7 +30,7 @@
     <ul class="nav justify-content-end">
       <li class="nav-item"><a href="/info" class="nav-link px-2">Terms and Conditions</a></li>
       <li class="nav-item"><a href="/info#privacy" class="nav-link px-2">Privacy Policy</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2">Contact</a></li>
+      <li class="nav-item"><a href="/info#contact" class="nav-link px-2">Contact</a></li>
     </ul>
     <div class="d-flex align-items-center">
       <div>© 2023 EON Drive</div>
