--- a/views/partials/profile_header.ejs
+++ b/views/partials/profile_header.ejs
@@ -9,6 +9,7 @@
   header {
     padding-top: 2vh;
   }
+
   .header-logo {
     height: 11vh;
     max-height: 100%;
@@ -58,7 +59,7 @@
   }
 
 </style>
-<div class="container header-block">
+<div class="container header-block w-75">
   <header class="d-flex flex-wrap align-items-stretch justify-content-md-between border-bottom">
     <!-- left  -->
     <div class="col-md-3 mb-2 mb-md-0">
