--- a/views/view/register.ejs
+++ b/views/view/register.ejs
@@ -16,6 +16,9 @@
         .nav {
           border: 1px dashed;
         } */
+        header {
+          padding-top: 2vh;
+        }
 
         img {
           height: 11vh;
@@ -87,7 +90,7 @@
         }
         .content-block {
           padding-top: 10vh;
-          padding-bottom: 6vh;
+          padding-bottom: 4vh;
         }
         .footer-block {
           background-color: white;
@@ -141,7 +144,7 @@
         </div>
       </div>
 
-      <div class="container mt-2">
+      <div class="container mt-4">
         <div class="row justify-content-center">
           <div class="col-md-6 col-lg-5">
             <div class="d-flex justify-content-center align-items-end mx-4 my-3">
@@ -207,9 +210,9 @@
     <div class="container w-75 footer-block">
       <footer class="d-flex flex-wrap justify-content-between align-items-center">
         <ul class="nav justify-content-end">
-          <li class="nav-item"><a href="#" class="nav-link px-2">Terms and Conditions</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2">Privacy Policy</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2">Contact</a></li>
+          <li class="nav-item"><a href="/info" class="nav-link px-2">Terms and Conditions</a></li>
+          <li class="nav-item"><a href="/info#privacy" class="nav-link px-2">Privacy Policy</a></li>
+          <li class="nav-item"><a href="/info#contact" class="nav-link px-2">Contact</a></li>
         </ul>
         <div class="d-flex align-items-center">
           <div>© 2023 EON Drive</div>
