[feat] update FE register code

--- a/views/view/register.ejs
+++ b/views/view/register.ejs
@@ -153,7 +153,7 @@
             <div class="card shadow">
               <div class="card-body">
                 <form>
-                  <div class="mb-3 d-flex">
+                  <!-- <div class="mb-3 d-flex">
                     <div class="me-2 flex-fill">
                       <label for="firstName" class="form-label">First Name<span class="text-danger">*</span></label>
                       <input type="text" class="form-control" name="firstName" id="firstName" required
@@ -164,6 +164,12 @@
                       <input type="text" class="form-control" name="lastName" id="lastName" required
                         placeholder="Enter Last Name">
                     </div>
+                  </div> -->
+
+                  <div class="mb-3">
+                    <label for="username" class="form-label">Name<span class="text-danger">*</span></label>
+                      <input type="text" class="form-control" name="username" id="username" required
+                        placeholder="Enter Name">
                   </div>
 
                   <div class="mb-3">
