[feat] complete share link notification

--- a/views/main/profile.ejs
+++ b/views/main/profile.ejs
@@ -79,7 +79,7 @@
       <%- include('../partials/view_footer') %>
   </div>
 
-  <script src="/socket.io/socket.io.js"></script>
+  <script type="module" src="/js/pages/main/header.js"></script>
 
   <script>
     $(document).ready(function ()
