--- a/views/main/home.ejs
+++ b/views/main/home.ejs
@@ -367,6 +367,26 @@
                 </div>
               </div>
               <!-- Modal for revoke link alert end -->
+              <!-- Modal for copy link prompt  -->
+              <div class="modal fade" id="linkModal" tabindex="-1" aria-labelledby="linkModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="linkModalLabel">Here's your link:</h5>
+                      <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button> -->
+                    </div>
+                    <div class="modal-body">
+                      <input type="text" class="form-control" id="linkInput" value="" readonly>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary btn-sm copy-link-btn" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Modal for copy link prompt end -->
             </div>
         </div>
         <!-- main block end -->
