--- a/views/view/login.ejs
+++ b/views/view/login.ejs
@@ -88,7 +88,7 @@
         }
 
         .content-block {
-          padding-top: 10vh;
+          padding-top: 14vh;
           padding-bottom: 6vh;
         }
 
@@ -97,21 +97,6 @@
           bottom: 0;
           left: 50%;
           transform: translateX(-50%);
-          color: rgb(141, 141, 141);
-        }
-
-        .footer-block a {
-          color: rgb(141, 141, 141);
-          text-decoration: none;
-        }
-
-        .footer-block a:hover {
-          color: rgb(105, 105, 105);
-        }
-
-        footer {
-          margin: 1vh 0;
-          padding: 1vh 0;
         }
       </style>
 </head>
@@ -194,7 +179,7 @@
       </div>
     </div>
     <!-- footer  -->
-    <div class="container w-75 footer-block">
+    <!-- <div class="container w-75 footer-block">
       <footer class="d-flex flex-wrap justify-content-between align-items-center">
         <ul class="nav justify-content-end">
           <li class="nav-item"><a href="/info" class="nav-link px-2">Terms and Conditions</a></li>
@@ -205,7 +190,8 @@
           <div>© 2023 EON Drive</div>
         </div>
       </footer>
-    </div>
+    </div> -->
+    <%- include('../partials/view_footer') %>
 </body>
 <script type="module" src="/js/pages/view/login.js"></script>
 
