--- a/views/main/home.ejs
+++ b/views/main/home.ejs
@@ -89,9 +89,11 @@
           width: 50%;
           transition: width 0.5s ease-in-out;
         }
+
         .upload-progress {
           background-color: #1968df;
         }
+
         .upload-progress-container {
           margin: 0 0 1vh 0;
         }
@@ -195,8 +197,8 @@
                 <div class="mx-2" style="width: 20%;">
                   <div id="progress-des"></div>
                   <div class="progress-bar-container">
-                    <div class="progress-bar usage-progress" role="progressbar" 
-                          aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar usage-progress" role="progressbar" aria-valuenow="25" aria-valuemin="0"
+                      aria-valuemax="100"></div>
                   </div>
                 </div>
               </div>
@@ -234,7 +236,7 @@
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                          <form id="folder-form">
+                          <form id="create-folder-form">
                             <div class="mb-3">
                               <label for="create-folder-name" class="form-label">Folder Name</label>
                               <input type="text" class="form-control" id="create-folder-name" name="folderName">
@@ -255,7 +257,7 @@
                   </div>
                   <!-- Delete Button -->
                   <div class="me-3" style="display: none;" id="delete-btn-div">
-                    <button type="button" class="btn btn-secondary" id="delete-btn">Delete</button>
+                    <button type="button" class="btn btn-secondary" id="delete-btn" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal">Delete</button>
                   </div>
                 </div>
               </div>
@@ -416,6 +418,26 @@
                 </div>
               </div>
               <!-- Modal for upload bar end  -->
+              <!-- Modal for confirm delete  -->
+              <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-body">
+                      <div id="confirm-delete-msg">Are you sure you want to delete the file?</div>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" id="confirm-delete-btn">
+                        Yes
+                      </button>
+                      <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
+                        No
+                      </button>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Modal for confirm delete end  -->
             </div>
         </div>
         <!-- main block end -->
