[feat] Add confirm modal for file perm delete & notification for file delete

--- a/views/main/home.ejs
+++ b/views/main/home.ejs
@@ -423,21 +423,31 @@
                 <div class="modal-dialog">
                   <div class="modal-content">
                     <div class="modal-body">
-                      <div id="confirm-delete-msg">Are you sure you want to delete the file?</div>
+                      <div id="confirm-delete-msg" class="fs-5">Are you sure you want to delete the file?</div>
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" id="confirm-delete-btn">
+                      <button type="button" class="btn btn-sm btn-secondary" id="confirm-delete-btn">
                         Yes
                       </button>
-                      <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
+                      <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-dismiss="modal">
                         No
                       </button>
-
                     </div>
                   </div>
                 </div>
               </div>
               <!-- Modal for confirm delete end  -->
+              <!-- Modal for confirm delete noti  -->
+              <div class="modal fade" id="confirmDeleteNotiModal" tabindex="-1" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-body my-3">
+                      Done!
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Modal for confirm delete noti end -->
             </div>
         </div>
         <!-- main block end -->
