--- a/views/main/trash.ejs
+++ b/views/main/trash.ejs
@@ -6,13 +6,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Trash - EON Drive</title>
   <%- include('../partials/main_stylesheet') %>
-  <%- include('../partials/main_script') %>
-  <!-- css internal -->
-  <style>
-    .form-check-input {
-      border-color: darkgray;
-    }
-  </style>
+    <%- include('../partials/main_script') %>
+      <!-- css internal -->
+      <style>
+        .form-check-input {
+          border-color: darkgray;
+        }
+
+        .custom-operation-btn {
+          background-color: #f8f5ef;
+        }
+        .custom-operation-btn:hover {
+          background-color: #f8f5ef;
+          box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+        }
+        .custom-operation-strong-btn {
+          background-color: #f8f5ef;
+        }
+        .custom-operation-strong-btn:hover {
+          background-color: #eee5d4;
+          box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+        }
+        .noty_theme__custom-theme.noty_bar {
+          background-color: #f8f5ef;
+          width: 20vw;
+          height: auto;
+          max-height: 50vh;
+          border-radius: 5px;
+          overflow-y: auto;
+          word-wrap: break-word;
+          padding: 10px;
+          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .btn-custom-yes {
+          background-color: #f8f5ef;
+        }
+
+        .btn-custom-yes:hover {
+          background-color: #f8f5ef;
+          box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .btn-custom-no:hover {
+          box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .confirm-msg {
+          width: 100%;
+          white-space: normal;
+          word-break: break-word;
+          font-size: large;
+        }
+      </style>
 </head>
 
 <body>
@@ -33,13 +79,14 @@
               <!-- BUTTON  -->
               <div style="width: 100%; height: 50px;" class="d-flex align-items-center">
                 <div>
-                  <button type="button" id="restore-delete-btn" class="btn btn-secondary me-2" style="display: none;">
+                  <button type="button" id="restore-delete-btn" class="me-2 btn custom-operation-btn" data-bs-toggle="modal"
+                    data-bs-target="#confirmRestoreModal" style="display: none;">
                     Restore
                   </button>
                 </div>
                 <div>
-                  <button type="button" id="perm-delete-btn" class="btn btn-outline-secondary me-2" data-bs-toggle="modal"
-                  data-bs-target="#confirmPermDeleteModal" style="display: none;">
+                  <button type="button" id="perm-delete-btn" class="me-2 btn custom-operation-strong-btn"
+                    data-bs-toggle="modal" data-bs-target="#confirmPermDeleteModal" style="display: none;">
                     Permanently Delete
                   </button>
                 </div>
@@ -61,37 +108,58 @@
               </div>
             </div>
         </div>
-        <!-- Modal for confirm perm delete  -->
-        <div class="modal fade" id="confirmPermDeleteModal" tabindex="-1" aria-hidden="true">
-          <div class="modal-dialog">
+        <!-- Modal for confirm restore  -->
+        <div class="modal fade" id="confirmRestoreModal" tabindex="-1" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
               <div class="modal-body">
-                <div id="confirm-perm-delete-msg" class="fs-5">Are you sure you want to permanently delete the file?</div>
-                <div class="pt-2">You won't be able to restore permanently deleted files.</div>
+                <div class="pt-3">
+                  <div id="confirm-restore-msg" class="text-wrap confirm-msg"></div>
+                </div>
+                <div class="d-flex justify-content-end pt-3">
+                  <button type="button" class="btn btn-custom-yes ms-2" id="confirm-restore-btn">
+                    Yes
+                  </button>
+                  <button type="button" class="btn btn-custom-no ms-2" data-bs-dismiss="modal">
+                    No
+                  </button>
+                </div>
               </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary btn-sm" id="confirm-perm-delete-btn">
+            </div>
+          </div>
+        </div>
+        <!-- Modal for confirm restore  -->
+        <!-- Modal for confirm perm delete  -->
+        <div class="modal fade" id="confirmPermDeleteModal" tabindex="-1" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-body">
+                <div id="confirm-perm-delete-msg" class="fs-5 text-wrap confirm-msg"></div>
+                <div class="pt-2">
+                  You won't be able to restore permanently deleted files.
+                </div>
+                <div class="d-flex justify-content-end pt-3">
+                  <button type="button" class="btn btn-custom-yes ms-2" id="confirm-perm-delete-btn">
+                    Yes
+                  </button>
+                  <button type="button" class="btn btn-custom-no ms-2" data-bs-dismiss="modal">
+                    No
+                  </button>
+                </div>
+              </div>
+              
+              <!-- <div class="modal-footer">
+                <button type="button" class="btn btn-custom-yes" id="confirm-perm-delete-btn">
                   Yes
                 </button>
-                <button type="button" class="btn btn-outline-secondary btn-sm" data-bs-dismiss="modal">
+                <button type="button" class="btn btn-custom-no" data-bs-dismiss="modal">
                   No
                 </button>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
         <!-- Modal for confirm delete end  -->
-        <!-- Modal for confirm delete noti  -->
-        <div class="modal fade" id="confirmPermDeleteNotiModal" tabindex="-1" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-body my-3">
-                Permanently deleted.
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Modal for confirm delete noti end -->
         <!-- main block end -->
       </div>
       <%- include('../partials/main_footer') %>
