--- a/views/main/history.ejs
+++ b/views/main/history.ejs
@@ -6,49 +6,118 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Version History - EON Drive</title>
   <%- include('../partials/main_stylesheet') %>
-  <%- include('../partials/main_script') %>
-  <!-- css internal -->
-  <style>
-    /* .d-flex {
-      border: 1px dashed;
-    } */
-    .rec:hover .restore-btn {
-      display: block;
-    }
-    .restore-btn {
-      display: none;
-    }
-    .current-btn:disabled {
-      opacity: 0.5;
-      cursor: not-allowed;
-    }
-  </style>
+    <%- include('../partials/main_script') %>
+      <!-- css internal -->
+      <style>
+        .d-flex {
+          /* border: 1px dashed; */
+        }
+
+        .rec:hover .restore-btn {
+          display: block;
+        }
+
+        .restore-btn {
+          display: none;
+        }
+
+        .current-btn:disabled {
+          border: none;
+          opacity: 0.5;
+          cursor: not-allowed;
+        }
+        .custom-operation-btn:hover {
+          background-color: #f8f5ef;
+          box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .noty_theme__custom-theme.noty_bar {
+          background-color: #f8f5ef;
+          width: 20vw;
+          height: auto;
+          max-height: 50vh;
+          border-radius: 5px;
+          overflow-y: auto;
+          word-wrap: break-word;
+          padding: 10px;
+          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .btn-custom-yes {
+          background-color: #f8f5ef;
+        }
+
+        .btn-custom-yes:hover {
+          background-color: #f8f5ef;
+          box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .btn-custom-no:hover {
+          box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .confirm-msg {
+          width: 100%;
+          white-space: normal;
+          word-break: break-word;
+          font-size: large;
+        }
+      </style>
 </head>
 
 <body>
   <div id="root">
     <%- include('../partials/main_header') %>
-    <!-- main block start -->
-    <div class="container content-block">
-      <div class="row">
-        <!-- left  -->
-        <%- include('../partials/main_left') %>
-        <!-- right  -->
-        <div class="col-11 d-flex flex-column align-items-start">
-          <div class="d-flex align-items-center pb-3" >
-            <h4>Version history : </h4>
-            <h4 class="ps-2 file-name" data-id="<%= fileId %>" style="color: grey;">
-              <%= fileName %>
-            </h4>
-          </div>
-          <div class="d-flex justify-content-center" style="width: 100%;">
-            <div id="file-history" style="width: 90%;"></div>
+      <!-- main block start -->
+      <div class="container content-block">
+        <div class="row">
+          <!-- left  -->
+          <%- include('../partials/main_left') %>
+            <!-- right  -->
+            <div class="col-11 d-flex flex-column align-items-start">
+              <div class="d-flex align-items-center pb-3">
+                <h4>Version history : </h4>
+                <h4 class="ps-2 file-name" data-id="<%= fileId %>" style="color: grey;">
+                  <%= fileName %>
+                </h4>
+              </div>
+              <div class="d-flex justify-content-center" style="width: 100%;">
+                <div id="file-history" style="width: 90%;"></div>
+              </div>
+            </div>
+        </div>
+        <!-- Modal for confirm restore  -->
+        <div class="modal fade" id="confirmRestoreModal" tabindex="-1" aria-hidden="true">
+          <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-body">
+                <div class="pt-3">
+                  <div id="confirm-restore-msg" class="text-wrap confirm-msg"></div>
+                </div>
+                <div class="d-flex justify-content-end pt-3">
+                  <button type="button" class="btn btn-custom-yes ms-2" id="confirm-restore-btn">
+                    Yes
+                  </button>
+                  <button type="button" class="btn btn-custom-no ms-2" data-bs-dismiss="modal">
+                    No
+                  </button>
+                </div>
+              </div>
+              <!-- <div class="modal-footer">
+              <button type="button" class="btn btn-custom-yes" id="confirm-restore-btn">
+                Yes
+              </button>
+              <button type="button" class="btn btn-custom-no" data-bs-dismiss="modal">
+                No
+              </button>
+            </div> -->
+            </div>
           </div>
         </div>
+        <!-- Modal for confirm restore  -->
+        <!-- main block end -->
       </div>
-      <!-- main block end -->
-    </div>
-    <%- include('../partials/main_footer') %>
+      <%- include('../partials/main_footer') %>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
