[chore] add autocomplete=false

--- a/views/view/login.ejs
+++ b/views/view/login.ejs
@@ -144,7 +144,7 @@
                   <div class="mb-3">
                     <label for="email" class="form-label">Email<span class="text-danger">*</span></label>
                     <input type="email" class="form-control" name="email" id="email" required placeholder="Enter Email"
-                      pattern="^[\-\w\.]+@([\-\w]+\.)+[\-\w]{2,4}$">
+                      pattern="^[\-\w\.]+@([\-\w]+\.)+[\-\w]{2,4}$" autocomplete="off">
                   </div>
 
                   <div class="mb-3">
