--- a/views/view/register.ejs
+++ b/views/view/register.ejs
@@ -157,13 +157,13 @@
                   <div class="mb-3">
                     <label for="username" class="form-label">Name<span class="text-danger">*</span></label>
                       <input type="text" class="form-control" name="username" id="username" required
-                        placeholder="Enter Name">
+                        placeholder="Enter Name" autocomplete="off">
                   </div>
 
                   <div class="mb-3">
                     <label for="email" class="form-label">Email<span class="text-danger">*</span></label>
                     <input type="email" class="form-control" name="email" id="email" required placeholder="Enter Email"
-                      pattern="^[\-\w\.]+@([\-\w]+\.)+[\-\w]{2,4}$">
+                      pattern="^[\-\w\.]+@([\-\w]+\.)+[\-\w]{2,4}$" autocomplete="off">
                   </div>
 
                   <div class="mb-3">
