--- a/views/view/view_file.ejs
+++ b/views/view/view_file.ejs
@@ -8,22 +8,32 @@
     <%= name %> - EON Drive
   </title>
   <%- include('../partials/view_stylesheet') %>
-  <%- include('../partials/view_script') %>
-  <style>
-    div {
-      /* border: 1px dashed; */
-    }
-    .footer-block {
-      position: fixed;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-    .content {
-      width: 50vw;
-      padding-left: 10vw;
-    }
-  </style>
+    <%- include('../partials/view_script') %>
+      <style>
+        div {
+          /* border: 1px dashed; */
+        }
+
+        .footer-block {
+          position: fixed;
+          bottom: 0;
+          left: 50%;
+          transform: translateX(-50%);
+        }
+
+        .content {
+          width: 50vw;
+          padding-left: 10vw;
+        }
+        .spinner-border {
+          width: 3rem;
+          height: 3rem;
+        }
+
+        #waiting-spinner svg {
+          transform: scale(3);
+        }
+      </style>
 </head>
 
 <body>
@@ -32,35 +42,62 @@
       <!-- Main Body  -->
       <div class="container content-block d-flex justify-content-center">
         <div class="content">
-        <h2 class="file-name">
-          <%= name %>
-        </h2>
+          <h2 class="file-name">
+            <%= name %>
+          </h2>
 
-        <div class="row pt-4 d-flex justify-content-start">
-          <div class="col-2 d-flex flex-column justify-items-center">
-            <p>Size:</p>
-            <p>Modified:</p>
-            <p>Owner:</p>
-          </div>
-          <div class="col-5 d-flex flex-column justify-items-center">
-            <p>
-              <%= Math.ceil(size/1024) %> KB
-            </p>
-            <p>
-              <% const dateTime = DateTime.fromISO(updated_at).toLocal(); %>
-              <%= dateTime.toFormat('yyyy-MM-dd HH:mm:ss') %>
-            </p>
-            <p>
-              <%= owner %>
-            </p>
-          </div>
-          <div class="col-3 d-flex align-items-center">
-            <button type="button" class="btn btn-outline-dark fi-dl-btn">Download</button>
+          <div class="row pt-4 d-flex justify-content-start">
+            <div class="col-2 d-flex flex-column justify-items-center">
+              <p>Size:</p>
+              <p>Modified:</p>
+              <p>Owner:</p>
+            </div>
+            <div class="col-5 d-flex flex-column justify-items-center">
+              <p>
+                <%= Math.ceil(size/1024) %> KB
+              </p>
+              <p>
+                <% const dateTime=DateTime.fromISO(updated_at).toLocal(); %>
+                  <%= dateTime.toFormat('yyyy-MM-dd HH:mm:ss') %>
+              </p>
+              <p>
+                <%= owner %>
+              </p>
+            </div>
+            <div class="col-3 d-flex align-items-center">
+              <button type="button" class="btn btn-outline-dark fi-dl-btn">Download</button>
+            </div>
           </div>
         </div>
+        <!-- Modal for waiting -->
+        <div class="modal fade" id="waitingModal" tabindex="-1" role="dialog" aria-labelledby="waitingModalLabel"
+          aria-hidden="true" data-bs-backdrop="static">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-body">
+                <div>
+                  <h5 class="waiting-status pb-3"></h5>
+                </div>
+                <div class="text-center pb-3">
+                  <div id="waiting-spinner" class="spinner-border text-secondary" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                    <span class="waiting-complete" style="display: none;">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-check-circle" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                        <path
+                          d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z" />
+                      </svg>
+                    </span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Modal for waiting end  -->
       </div>
-      </div>
-    <%- include('../partials/view_footer') %>
+      <%- include('../partials/view_footer') %>
   </div>
 
   <script type="module" src="/js/pages/view/view_file.js"></script>
