--- a/views/view/view_folder.ejs
+++ b/views/view/view_folder.ejs
@@ -38,14 +38,14 @@
           width: 68vw;
         }
 
-        /* div {
-          border: 1px dashed;
-        } */
+        .spinner-border {
+          width: 3rem;
+          height: 3rem;
+        }
 
-        /* 
-        .d-flex {
-          border: 1px dashed;
-        } */
+        #waiting-spinner svg {
+          transform: scale(3);
+        }
       </style>
 </head>
 
@@ -89,6 +89,33 @@
             </table>
           </div>
         </div>
+        <!-- Modal for waiting -->
+        <div class="modal fade" id="waitingModal" tabindex="-1" role="dialog" aria-labelledby="waitingModalLabel"
+          aria-hidden="true" data-bs-backdrop="static">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-body">
+                <div>
+                  <h5 class="waiting-status pb-3"></h5>
+                </div>
+                <div class="text-center pb-3">
+                  <div id="waiting-spinner" class="spinner-border text-secondary" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                    <span class="waiting-complete" style="display: none;">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-check-circle" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                        <path
+                          d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z" />
+                      </svg>
+                    </span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Modal for waiting end  -->
       </div>
       <%- include('../partials/view_footer') %>
   </div>
