--- a/views/view/login.ejs
+++ b/views/view/login.ejs
@@ -12,13 +12,10 @@
           font-family: 'Lato', sans-serif !important;
         }
 
-        /* div,
-        .nav {
-          border: 1px dashed;
-        } */
         header {
           padding-top: 2vh;
         }
+
         img {
           height: 11vh;
           max-height: 100%;
@@ -98,6 +95,13 @@
           left: 50%;
           transform: translateX(-50%);
         }
+
+        @media screen and (min-height: 800px) {
+          .content-block {
+            padding-top: 13vh;
+            padding-bottom: 13vh;
+          }
+        }
       </style>
 </head>
 
@@ -153,13 +157,13 @@
                       placeholder="Enter Password">
                   </div>
 
-                  <div class="mb-3 form-check d-flex justify-content-between">
+                  <!-- <div class="mb-3 form-check d-flex justify-content-between">
                     <div>
                       <input type="checkbox" class="form-check-input" id="rememberMe">
                       <label class="form-check-label" for="rememberMe">Remember me</label>
                     </div>
                     <a class="me-2" href="#">Forgot password</a>
-                  </div>
+                  </div> -->
 
                   <div class="d-flex justify-content-center pt-2 pb-3">
                     <button type="submit" class="w-100 login-btn py-1">Continue</button>
@@ -179,18 +183,6 @@
       </div>
     </div>
     <!-- footer  -->
-    <!-- <div class="container w-75 footer-block">
-      <footer class="d-flex flex-wrap justify-content-between align-items-center">
-        <ul class="nav justify-content-end">
-          <li class="nav-item"><a href="/info" class="nav-link px-2">Terms and Conditions</a></li>
-          <li class="nav-item"><a href="/info#privacy" class="nav-link px-2">Privacy Policy</a></li>
-          <li class="nav-item"><a href="/info#contact" class="nav-link px-2">Contact</a></li>
-        </ul>
-        <div class="d-flex align-items-center">
-          <div>© 2023 EON Drive</div>
-        </div>
-      </footer>
-    </div> -->
     <%- include('../partials/view_footer') %>
 </body>
 <script type="module" src="/js/pages/view/login.js"></script>
